Fix home page, single column on mobile screen

--- a/crowdfunder/app/assets/stylesheets/application.css
+++ b/crowdfunder/app/assets/stylesheets/application.css
@@ -20,7 +20,8 @@
   /*height: 30em;
   overflow: scroll;*/
   margin-bottom: 1.5em;
-  width: 240px;
+  margin-right: 1em;
+  max-width: 400px;
 }
 
  .campaign ul {
@@ -29,7 +30,7 @@
 }
 
 .campaign-image {
-  width: 240px;
+  width: 100%;
   height:194px;
   background-color: #D8D2C0;
 }
@@ -62,10 +63,20 @@
     margin: 0 0 .5em 0;
  }
 
-.name h1 {
+ .name {
+    /*margin-right: 1em !important;*/
+
+ }
+
+.name a{
   font-family: 'Codystar', cursive;
-  margin-right: 1.5em !important;
-  font-size: 2em !important;
+  font-size: 2em;
+  color: #fff;
+  margin-bottom: 0;
+}
+
+.name p{
+  margin: .85em 0 0 1em;
 }
 
 .title-area {
